--- a/index.html
+++ b/index.html
@@ -3,74 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecionando...</title>
+  <title>Redirecionando ZedoLink...</title>
   <style>
-    /* Estilos básicos para centralizar a mensagem na tela */
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f0f2f5;
-      color: #333;
-    }
-    p {
-      font-size: 1.2rem;
-      text-align: center;
-      padding: 20px;
-    }
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f0f2f5; color: #333; }
+    p { font-size: 1.2rem; text-align: center; padding: 20px; }
   </style>
 </head>
 <body>
+  <p id="mensagem">Procurando seu link...</p>
 
-  <p id="mensagem">Aguarde, estamos processando seu link...</p>
-
-  <noscript>
-    <p>Para que esta página funcione, você precisa habilitar o JavaScript em seu navegador.</p>
-  </noscript>
+  <script src="links-db.js"></script>
 
   <script>
-    // Envolvemos o código em uma função para melhor organização
-    function executarRedirecionamento() {
+    function redirecionar() {
       const mensagemElemento = document.getElementById("mensagem");
-
       try {
-        // 1. Pega os parâmetros da URL de forma segura
         const params = new URLSearchParams(window.location.search);
         const id = params.get("id");
 
-        // Validação inicial: verifica se o 'id' foi passado
         if (!id) {
-          mensagemElemento.textContent = "❌ Erro: Nenhum ID de link foi fornecido na URL.";
+          mensagemElemento.textContent = "❌ Nenhum ID de link foi fornecido.";
           return;
         }
 
-        // 2. Acessa o localStorage e trata o caso de estar vazio ou inválido
-        const linksArmazenados = localStorage.getItem("meus_links");
-        const links = JSON.parse(linksArmazenados || "[]");
-
-        // 3. Busca pelo link correspondente ao 'id'
-        const linkDestino = links.find(l => l.id === id);
-
-        // 4. Se encontrar o link, redireciona. Senão, exibe erro.
-        if (linkDestino && linkDestino.original) {
-          // location.replace() é ligeiramente melhor que .href, pois não salva
-          // a página de redirecionamento no histórico de sessão.
-          window.location.replace(linkDestino.original);
+        // Verifica se o ID existe no nosso objeto linksDB
+        if (linksDB && linksDB[id]) {
+          // Se existir, redireciona
+          window.location.replace(linksDB[id]);
         } else {
-          mensagemElemento.textContent = "🔍 Link não encontrado ou expirado.";
+          // Se não, mostra a mensagem de erro
+          mensagemElemento.textContent = "🔍 Link não encontrado ou ainda não foi publicado.";
         }
       } catch (error) {
-        // Captura qualquer erro inesperado (ex: JSON mal formatado no localStorage)
-        console.error("Ocorreu um erro durante o redirecionamento:", error);
-        mensagemElemento.textContent = "Ocorreu um erro inesperado ao processar seu link.";
+        console.error("Erro:", error);
+        mensagemElemento.textContent = "Ocorreu um erro ao processar o link.";
       }
     }
-
-    // Executa a função principal
-    executarRedirecionamento();
+    redirecionar();
   </script>
 
 </body>
