--- a/criar.htm
+++ b/criar.htm
@@ -205,7 +205,7 @@
         </section>
 
         <section class="links-section">
-            <h2>Seus Links Recentes da ZedoLink</h2>
+            <h2>É o ZédoLink</h2>
             <div id="links-lista"></div>
         </section>
     </main>
